# research-mind

./: .env.cloud.example  .env.example  .gitignore  Makefile  README.md  dev.py  docker-compose.cloud.yml  docker-compose.gpu.yml  docker-compose.yml  litellm_config.yaml  pyproject.toml  render.yaml
.claude/: settings.json
.github/workflows/: build.yml  deploy-cloudrun.yml  deploy.yml  pages.yml  test.yml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  enums.py  main.py  schemas.py
backend/app/agents/: prompts.py  research_agent.py
backend/app/auth/: access.py  deps.py
backend/app/llm/: client.py
backend/qdrant_db/: meta.json
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_contexts.py  test_embedder.py  test_health.py  test_history.py  test_ingest.py  test_messages.py  test_query.py  test_routing.py  test_sources.py
evaluation/: evaluation_results.json  requirements.txt  run_eval.py
evaluation/datasets/: qa_pairs.json
frontend/: Dockerfile  app.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/modules/: api_client.py  chat.py  context_panel.py  context_view.py  i18n.py  sidebar.py  styles.py  voice.py  voice_mode.py
frontend2/: .env.local.example  .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend2/.next/: trace
k8s/: backend.yaml  frontend.yaml  ingress.yaml  litellm.yaml  namespace.yaml  qdrant.yaml  secrets.yaml
spark/: Dockerfile  requirements.txt
spark/jobs/: batch_ingest.py
(+239 files in other folders)
